RESOLVED FIXED268003
[GStreamer][MediaStream] http/wpt/mediastream/transfer-mediastreamtrack-to-worker.html asserts/fails
https://bugs.webkit.org/show_bug.cgi?id=268003
Summary [GStreamer][MediaStream] http/wpt/mediastream/transfer-mediastreamtrack-to-wo...
Philippe Normand
Reported 2024-01-24 07:12:33 PST
Thread 1 (Thread 0x7f55697fa6c0 (LWP 195049)): #0 WTFCrash() () at /app/webkit/Source/WTF/wtf/Assertions.cpp:333 #1 0x00007f55f866bc96 in WTFCrashWithInfo(int, char const*, char const*, int) () at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/Assertions.h:778 #2 0x00007f55fc7c1022 in WebCore::WebCodecsVideoFrame::create(WebCore::ScriptExecutionContext&, WTF::Ref<WebCore::VideoFrame, WTF::RawPtrTraits<WebCore::VideoFrame> >&&, WebCore::WebCodecsVideoFrame::BufferInit&&) (context=..., videoFrame=..., init=...) at /app/webkit/Source/WebCore/Modules/webcodecs/WebCodecsVideoFrame.cpp:324 #3 0x00007f55fc40e98d in WebCore::MediaStreamTrackProcessor::VideoFrameObserver::takeVideoFrame(WebCore::ScriptExecutionContext&) (this=0x7f55d932e500, context=...) at /app/webkit/Source/WebCore/Modules/mediastream/MediaStreamTrackProcessor.cpp:162 #4 0x00007f55fc41f271 in WebCore::MediaStreamTrackProcessor::VideoFrameObserverWrapper::takeVideoFrame(WebCore::ScriptExecutionContext&) (this=0x7f55d94289a0, context=...) at /app/webkit/Source/WebCore/Modules/mediastream/MediaStreamTrackProcessor.h:136 #5 0x00007f55fc40e1cf in WebCore::MediaStreamTrackProcessor::tryEnqueueingVideoFrame() (this=0x7f5579005b20) at /app/webkit/Source/WebCore/Modules/mediastream/MediaStreamTrackProcessor.cpp:98 #6 0x00007f55fc40ef7d in WebCore::MediaStreamTrackProcessor::Source::doPull() (this=0x7f5579005c10) at /app/webkit/Source/WebCore/Modules/mediastream/MediaStreamTrackProcessor.cpp:236 #7 0x00007f55fc6422d9 in WebCore::ReadableStreamSource::pull(WebCore::DOMPromiseDeferred<void>&&) (this=0x7f5579005c10, promise=...) at /app/webkit/Source/WebCore/Modules/streams/ReadableStreamSource.cpp:55 #8 0x00007f55fcbb2964 in WebCore::JSReadableStreamSource::pull(JSC::JSGlobalObject&, JSC::CallFrame&, WTF::Ref<WebCore::DeferredPromise, WTF::RawPtrTraits<WebCore::DeferredPromise> >&&) (this=0x7f55d935af08, promise=...) at /app/webkit/Source/WebCore/bindings/js/JSReadableStreamSourceCustom.cpp:55 #9 0x00007f55fb717d91 in WebCore::jsReadableStreamSourcePrototypeFunction_pullBody(JSC::JSGlobalObject*, JSC::CallFrame*, WebCore::IDLOperationReturningPromise<WebCore::JSReadableStreamSource>::ClassParameter, WTF::Ref<WebCore::DeferredPromise, WTF::RawPtrTraits<WebCore::DeferredPromise> >&&) (lexicalGlobalObject=0x7f55951a2088, callFrame=0x7f55697f87a0, castedThis=0x7f55d935af08, promise=...) at /app/webkit/WebKitBuild/GTK/Debug/WebCore/DerivedSources/JSReadableStreamSource.cpp:170 #10 0x00007f55fb71dcff in operator()(JSC::JSGlobalObject&, JSC::CallFrame&, WTF::Ref<WebCore::DeferredPromise, WTF::RawPtrTraits<WebCore::DeferredPromise> >&&) const (__closure=0x7f55697f8698, lexicalGlobalObject=..., callFrame=..., promise=...) at /app/webkit/Source/WebCore/bindings/js/JSDOMOperationReturningPromise.h:54 #11 0x00007f55fb722015 in WebCore::callPromiseFunction<WebCore::IDLOperationReturningPromise<WebCore::JSReadableStreamSource>::call<WebCore::jsReadableStreamSourcePrototypeFunction_pullBody, (WebCore::CastedThisErrorBehavior)3>(JSC::JSGlobalObject&, JSC::CallFrame&, char const*)::<lambda(JSC::JSGlobalObject&, JSC::CallFrame&, WTF::Ref<WebCore::DeferredPromise>&&)> >(JSC::JSGlobalObject &, JSC::CallFrame &, struct {...}) (lexicalGlobalObject=..., callFrame=..., functor=...) at /app/webkit/Source/WebCore/bindings/js/JSDOMPromiseDeferred.h:376 #12 0x00007f55fb71dd33 in WebCore::IDLOperationReturningPromise<WebCore::JSReadableStreamSource>::call<WebCore::jsReadableStreamSourcePrototypeFunction_pullBody, (WebCore::CastedThisErrorBehavior)3>(JSC::JSGlobalObject&, JSC::CallFrame&, char const*) (lexicalGlobalObject=..., callFrame=..., operationName=0x7f55f1e75ba1 "pull") at /app/webkit/Source/WebCore/bindings/js/JSDOMOperationReturningPromise.h:41 #13 0x00007f55fb717def in WebCore::jsReadableStreamSourcePrototypeFunction_pull(JSC::JSGlobalObject*, JSC::CallFrame*) (lexicalGlobalObject=0x7f55951a2088, callFrame=0x7f55697f87a0) at /app/webkit/WebKitBuild/GTK/Debug/WebCore/DerivedSources/JSReadableStreamSource.cpp:175 #14 0x00007f5597e08878 in () #15 0x00007f55697f8840 in () #16 0x00007f55ebb3ed71 in op_call_varargs_return_location () at /app/webkit/Source/JavaScriptCore/llint/LowLevelInterpreter.asm:1171 #17 0x0000000000000000 in ()
Attachments
Philippe Normand
Comment 1 2024-01-24 07:19:47 PST
EWS
Comment 2 2024-01-25 03:16:27 PST
Committed 273491@main (7725039edc39): <https://commits.webkit.org/273491@main> Reviewed commits have been landed. Closing PR #23167 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-01-25 03:17:14 PST
Note You need to log in before you can comment on or make changes to this bug.