[GStreamer][MediaStream] http/wpt/mediastream/transfer-mediastreamtrack-to-worker.html asserts/fails https://bugs.webkit.org/show_bug.cgi?id=268003

Reviewed by Xabier Rodriguez-Calvar.

The test was failing/asserting because the notified video frames were created with a zero
presentation size. By using the createWrappedSample() API the presentation size is set from the
sample caps.

* LayoutTests/platform/glib/TestExpectations:
* Source/WebCore/platform/mediastream/gstreamer/GStreamerVideoCapturer.cpp:
(WebCore::GStreamerVideoCapturer::setSinkVideoFrameCallback):

Canonical link: https://commits.webkit.org/273491@main